# rudeus

./: .gitignore  Cargo.toml  README.md  justfile
crates/rudeus-niri/: Cargo.toml
crates/rudeus-niri/src/: main.rs
rudeus/DEBIAN/: control  postinst
rudeus/DEBIAN/etc/rudeus/default/eww/.config/eww/: eww.yuck
rudeus/DEBIAN/etc/rudeus/default/eww/.config/eww/scripts/: get_essid  get_pow  get_pow_stat
rudeus/DEBIAN/etc/rudeus/default/eww/.config/eww/widgets/: power.yuck
rudeus/DEBIAN/etc/rudeus/default/eww/.config/eww/widgets/workspaces/: workspaces.scss  workspaces.yuck
rudeus/DEBIAN/etc/rudeus/default/fish/.config/fish/: config.fish
rudeus/DEBIAN/etc/rudeus/default/zed/.config/zed/: settings.json
rudeus/DEBIAN/etc/systemd/user/: xwayland-satellite.service
rudeus/etc/rudeus/default/: justfile
rudeus/etc/rudeus/default/alacritty/.config/alacritty/: alacritty.toml
rudeus/etc/rudeus/default/eww/.config/eww/: eww.scss  eww.yuck
rudeus/etc/rudeus/default/eww/.config/eww/scripts/: get_brightness  get_sound  get_ws
rudeus/etc/rudeus/default/eww/.config/eww/widgets/: wifi.yuck
rudeus/etc/rudeus/default/eww/.config/eww/widgets/sys/: sys.scss  sys.yuck
rudeus/etc/rudeus/default/eww/.config/eww/widgets/workspaces/: workspaces.scss  workspaces.yuck
rudeus/etc/rudeus/default/niri/.config/niri/: config.kdl
rudeus/etc/rudeus/default/yazi/.config/yazi/: yazi.toml
rudeus/etc/rudeus/default/zed/.config/zed/: keymap.json
rudeus/etc/systemd/user/: eww-open@.service  eww.service  niri.service
