[package]
name = "rudeus-niri"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }

json = "0.12.4"
niri-ipc = "25.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
